--- a/set(100-107).md
+++ b/set(100-107).md
@@ -185,9 +185,42 @@ ___
 
 **Можно ли проинициализировать значение объекта в месте его определения без вызова конструктора?**
 
-мы не можем ответить на этот вопрос. 
+В месте его объявления без конструктора - нет. Конструктор будет вызван неявно.
 
-В в C были структуры, но в C не было конструкторов, поэтому инициализация структур там была без конструкторов. В C++ появились конструкторы, и если мы не объявляли никакого конструктора в нашей структуре (struct, union, class), то за нас это сделает компилятор. Значит ли это, что в C++ теперь нельзя инициализировать структуру совсем без конструктора( и без того, что создаст компилятор )??
+Не в месте его объявления - да. С помощью инициализатора.
+
+Пример. Инициализатор - `Point::SetValue()`
+```cpp
+#define nline '\n'
+#include <iostream>
+
+class Point {
+public:
+    void SetPosition (const double &x = 0, const double &y = 0) noexcept {
+        _x = x;
+        _y = y;
+    }
+
+    void GetPosition() const noexcept {
+        std::cout << nline << "(" << _x << "," << _y << ")" << nline;
+    }
+
+private:
+    double _x;
+    double _y;
+};
+
+
+int main()
+{
+    Point point; point.SetPosition(2, 89); 
+    
+    point.GetPosition();
+    return 0;
+}
+```
+
+**Замечание.** Поскольку нет конструктора по имолчанию и инициализации по умолчанию для класса не определена, то должно была возникнуть ошибка `UB`, но этого не произошло. Почему ошибки нет?  Потому что класс `Point` не имеет никаких сложных атрибутов, а инициализация по умолчанию определена для типа `double`. Будьте аккуратны, ведь инициализация по умолчанию доступна не во всех страндартах.
 
 ___
 
@@ -197,7 +230,7 @@ ___
     
 **Ответ:**  
 - **Инициализирующий конструктор** - любой ранее перечисленный конструктор. 
-- Способ оформления. Конструктор - функция-метод и её название обязательно должно совпадать с названием класса. Параметры конструктора могут отсутствовать, и тогда такой конструктор называется конструктором по умолчанию (= инициализация по умолчанию) (_default constructor_). А может содержать какие-то параметры, которые будут как-то учитываться при создани экземпляров структуры.
+- Способ оформления. Конструктор - функция-член и её название обязательно должно совпадать с названием класса. Параметры конструктора могут отсутствовать, и тогда такой конструктор называется конструктором по умолчанию (= инициализация по умолчанию) (_default constructor_). А может содержать какие-то параметры, которые будут как-то учитываться при создани экземпляров структуры.
 - Способ применения. Он вызывается автоматически при создании экземпляра структуры. Но конструктор объекта можно вызвать почти явно. С помощью оператора `new`, который сначала выделит память, а потом вызовет соответствующий параметрам конструктор.
 - КОНСТРУКТОР != ОПЕРАТОР ПРИСВАИВАНИЯ. Пример
     ```c++
@@ -250,9 +283,9 @@ ___
     
 **Ответ:** 
 
-> Достаточно традиционный взгляд — это считать ссылку «замаскированным» константным указателем. Но Страуструп и другие авторы, например Стефан Дьюхэрст [Dewhurst], считают такую точку зрения неверной и настаивают, что ссылка — это просто псевдоним переменой, на которую она ссылается.
+> Достаточно традиционный взгляд — это считать ссылку «замаскированным» константным указателем. Но Страуструп и другие авторы, например Стефан Дьюхэрст, считают такую точку зрения неверной и настаивают, что ссылка — это просто псевдоним переменой, на которую она ссылается.
 
-Указатель в свою очередь это некий объект, значением которого является адресс в памяти другого объекта. 
+Указатель, в свою очередь, это некий объект, значением которого является адресс в памяти другого объекта. 
 
 > Синтаксис языка не позволяет различить целевой объект и саму  ссылку — все операции над ссылкой на самом деле являются операциями над объектом. Как следствие этого:  
 >   1. Ссылку нельзя переназначить на другой объект - связь между ссылкой и переменной «до гробовой доски»
@@ -334,7 +367,7 @@ ___
 
 Минусы:  
 - усложнение синтаксиса
-- дополнительные проверки `!= nullptr`, иначе прога обвалиться
+- дополнительные проверки `!= nullptr`, иначе программа обвалиться
 - адрессная арифметика **ОЧЕНЬ-ОЧЕНЬ** не безопастна 
 - разыменование медленнее, чем прямой доступ по значению
   
