--- a/set(58-66).md
+++ b/set(58-66).md
@@ -268,12 +268,12 @@ ___
 **Ответ:** 
 
 1. Класс называется абстрактным, если хотябы один из его методов объявлен как чисто-виртульный. Философия абстрактных класов слудующая.
-> Абстрактные классы используются в качестве обобщенных концепций, на основе которых можно создавать более конкретные производные классы.
+> Абстрактные классы используются в качестве обобщенных концепций, на основе которых можно создавать более конкретные производные классы. Хороший пример есть в ответе 7 или 17
 
 Чтобы объявить метод класса чисто-виртуальным нужно приравнять виртуальную функцию приравнять к 0 во время её объявления.
     
 ```c++
-    virtual void function GetData() = 0;
+    virtual void GetData() = 0;
 ```
 Мы предпочитам объявлять чисто-виртуальные конструкторы и деструкторы. 
 
@@ -297,7 +297,11 @@ ___
 
 1. см. Вопрос 62
 
-2. Например, удобно будет объявить класс `Млекопитающие` абстрактным. Объвить там чисто-виртуальные методы: кормление молоком, живорождение. Унаследовать от класса `Млекопитающие` классы `Обезьянка`, `Свинка`, `Коровка`, `Кошечка`, `Собачка`, `Человечина`. В каждом из них опрделить методы базового класса.    ___
+2. Например, удобно будет объявить класс `Млекопитающие` абстрактным. Объвить там чисто-виртуальные методы: кормление молоком, живорождение. Унаследовать от класса `Млекопитающие` классы `Обезьянка`, `Свинка`, `Коровка`, `Кошечка`, `Собачка`, `Человечина`. В каждом из них опрделить методы базового класса. 
+
+3. Обязательно посмотрите еще раз примеры в вопросах 7, 17. Они очень хорошие 
+
+___
 
 ## Вопрос 64
 
