--- a/set(67-73).md
+++ b/set(67-73).md
@@ -162,14 +162,14 @@ ___
 6. `static` — **статическая** переменная (локальная). Пожалуйста, прочитайте эту [статью](https://habr.com/ru/post/527044/). Она очень хорошо написана, поэтмоу нет смысла делать из неё выжимку.
 
 
-| Ключевое слово |    Класс памяти     |   Где находится    |       Создание        | Удаление |
-|----------------|:-------------------:|:------------------:|:---------------------:|---------:|
-|                |    автоматическя    |       Stack        |      Compile-time     | Run-time |
-|                |    динамическая     |        Heap        |       Run-time        | Run-time |
-| `extern`       | глобальная(внешняя) |    Общая память    | Compile-time(Linking) |     exit |
-| `register`     |     регистровая     | Кеш или регистр ЦП |       Run-time        | Run-time |
-|                |      временная      | Оперативная память |       Run-time        | Run-time |
-| `static`       |     статическая     |    .data и .bss    | Run-time\Compile-time |     exit |
+| Ключевое слово |    Класс памяти     |   Где находится    |       Создание        |         Удаление |
+|----------------|:-------------------:|:------------------:|:---------------------:|-----------------:|
+|                |    автоматическя    |       Stack        |     Compile-time      |         Run-time |
+|                |    динамическая     |        Heap        |       Run-time        |         Run-time |
+| `extern`       | глобальная(внешняя) |    Общая память    | Compile-time(Linking) | exit(after main) |
+| `register`     |     регистровая     | Кеш или регистр ЦП |       Run-time        |         Run-time |
+|                |      временная      | Оперативная память |       Run-time        |         Run-time |
+| `static`       |     статическая     |    .data и .bss    | Run-time\Compile-time | exit(after main) |
 ___
 
 ## Вопрос 72
@@ -184,4 +184,4 @@ ___
 
 **Что дальше будет происходить с временным объектом после завершения его создавшей функции?**
 
-**Ответ:** будет вызван деструктор этого объекта
+**Ответ:** будет вызван деструктор этого объекта??? Ведь он будет вызван?? Помогите, пожалуйста
