--- a/set(67-73).md
+++ b/set(67-73).md
@@ -182,6 +182,6 @@ ___
 
 ## Вопрос 73
 
-**Что дальше будет происходить с временным объектом после завершения его создавшей функции?**
+**Что дальше будет происходить со временным объектом после завершения его создавшей функции?**
 
-**Ответ:** будет вызван деструктор этого объекта??? Ведь он будет вызван?? Помогите, пожалуйста
+**Ответ:** будет вызван деструктор этого объекта
