--- a/object-oriented-programming-2/doc/latex/annotated.tex
+++ b/object-oriented-programming-2/doc/latex/annotated.tex
@@ -1,4 +1,4 @@
-\doxysection{Class List}
-Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{class_bike}{Bike}} }{\pageref{class_bike}}{}
+\doxysection{Классы}
+Классы с их кратким описанием.\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{class_bike}{Bike}} \\*Класс для p.\+2 }{\pageref{class_bike}}{}
 \end{DoxyCompactList}
