where doc MFK??

--- a/object-oriented-programming-2/doc/latex/practice1_0flist_0e_8cpp.tex
+++ b/object-oriented-programming-2/doc/latex/practice1_0flist_0e_8cpp.tex
@@ -1,4 +1,4 @@
-\hypertarget{practice1_0flist_0e_8cpp}{}\doxysection{Файл C\+:/\+Users/averu/\+Documents/git\+\_\+local/programming-\/practice/object-\/oriented-\/programming-\/2/practice1\mbox{[}list\mbox{]}.cpp}
+\hypertarget{practice1_0flist_0e_8cpp}{}\doxysection{Файл practice1\mbox{[}list\mbox{]}.cpp}
 \label{practice1_0flist_0e_8cpp}\index{C:/Users/averu/Documents/git\_local/programming-\/practice/object-\/oriented-\/programming-\/2/practice1\mbox{[}list\mbox{]}.cpp@{C:/Users/averu/Documents/git\_local/programming-\/practice/object-\/oriented-\/programming-\/2/practice1[list].cpp}}
 
 
