--- a/python/w2.ipynb
+++ b/python/w2.ipynb
@@ -968,7 +968,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing \n"
+    "from sklearn import preprocessing "
    ]
   },
   {
