--- a/python/w5.ipynb
+++ b/python/w5.ipynb
@@ -10,28 +10,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "22097a76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import factorial, asin, pi\n",
-    "from decimal import *"
+    "import math\n",
+    "from decimal import *\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "5d987c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11702754792724046\n",
+      "0.0020425160268658115\n",
+      "\n",
+      "0.9999979140648652\n",
+      "0.0020425146066802994\n",
+      "\n",
+      "0.002042518867242168\n",
+      "0.11649764730232891\n"
+     ]
+    }
+   ],
    "source": [
     "class Trigonometry:\n",
     "\n",
     "    def convert_to_radians(x):\n",
     "        return x * pi / 180\n",
     "\n",
-    "    def sin(self, x):\n",
+    "    def sin(x):\n",
     "        n = 50\n",
     "        s = 0\n",
     "        for i in range(n):\n",
@@ -40,7 +56,7 @@
     "            s += s1\n",
     "        return s\n",
     "\n",
-    "    def cos(self, x):\n",
+    "    def cos(x):\n",
     "        n = 50\n",
     "        s = 0\n",
     "        for i in range(n):\n",
@@ -49,10 +65,10 @@
     "            s += s1\n",
     "        return s\n",
     "\n",
-    "    def tg(self, x):\n",
-    "        return self.sin(x) / self.cos(x)\n",
+    "    def tan(x):\n",
+    "        return math.tan(x)\n",
     "\n",
-    "    def arctg(self, x):\n",
+    "    def atan(x):\n",
     "        n = 100\n",
     "        s = 0\n",
     "        for i in range(n):\n",
@@ -60,8 +76,8 @@
     "            s += s1\n",
     "        return s\n",
     "    \n",
-    "    def arcsin(self, x):\n",
-    "        return asin(x)\n",
+    "    def asin(x):\n",
+    "        return math.asin(x)\n",
     "# other variant via Taylor Series\n",
     "#         for i in range(n):\n",
     "#             s1 = factorial(factorial(2*n + 1)) / factorial(factorial(2 * n)) * x**(2 * n + 1)) / (2 * n + 1)**2\n",
@@ -69,8 +85,25 @@
     "#             s += s1\n",
     "#         return s\n",
     "\n",
-    "    def arccos(self, x):\n",
-    "        return pi/2 - self.arcsin(x)\n"
+    "    def acos(x):\n",
+    "        return pi/2 - math.asin(x)\n",
+    "\n",
+    "\n",
+    "\n",
+    "myVal = random.random()\n",
+    "print(myVal)\n",
+    "\n",
+    "myVal_rad = Trigonometry.convert_to_radians(myVal)\n",
+    "print(myVal_rad)\n",
+    "print()\n",
+    "\n",
+    "print(Trigonometry.cos(myVal_rad))\n",
+    "print(Trigonometry.sin(myVal_rad))\n",
+    "print()\n",
+    "\n",
+    "print(Trigonometry.tan(myVal_rad))\n",
+    "print(Trigonometry.atan(myVal))\n",
+    "\n"
    ]
   },
   {
